fixes foodCont width in dark mode

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -27,7 +27,7 @@
     background-color: #9ca9a7;
     border-radius: 8px;
     padding: 6%;
-    width: 350px;
+    width: 408px;
     margin-top: 8%;
     display: flex;
     flex-direction: column;
